add: manifest comp list by user id
