# expertfy-api/src/domain/models/manifestCompList.ts
@@ -1,0 +1,6 @@
+import { manifestCompetenceModel } from "./manifestCompetenceModel";
+
+export interface manifestCompList extends manifestCompetenceModel {  
+  competenceName: string;
+
+}
